test/errors/python_generator_error/zs/api_clashing/structure_with_api_clash_error.zs
package api_clashing.structure_with_api_clash_error;

struct Api
{
    uint32 field;
};
